k8s/pocket-id/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pocket-id
  namespace: pocket-id
spec:
  selector:
    app: pocket-id
  ports:
    - port: 80
      targetPort: 1411
      protocol: TCP
      name: http
    - port: 9464
      targetPort: 9464
      protocol: TCP
      name: metrics
  type: ClusterIP
