k8s/pocket-id/app/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pocket-id-ingressroute
  namespace: pocket-id
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pocket-id.home.coredev.uk`)
      kind: Rule
      services:
        - name: pocket-id
          port: 80
  tls:
    secretName: pocket-id-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pocket-id-redirect
  namespace: pocket-id
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`pocket-id.home.coredev.uk`)
      kind: Rule
      middlewares:
        - name: https-redirect
      services:
        - name: pocket-id
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: pocket-id
spec:
  redirectScheme:
    scheme: https
    permanent: true
